# Arquivos

./: frequencia.py  pyproject.toml
