[tool.poetry]
name = "arquivos"
version = "0.1.0"
description = ""
authors = ["Gabriela <gabedeandradee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.1"
ipython = "^8.5.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
